# ecom-netsuite-suites

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  GEMINI_CONTEXT.md  Makefile  README.md  architecture-diagram.html  chat-ai-architecture.html  docker-compose.prod.yml  docker-compose.yml  package-lock.json  platform-architecture.html  skills-lock.json  vibe-coding-strategy.md
backend/: Dockerfile  Dockerfile.prod  celerybeat-schedule  entrypoint.sh  pyproject.toml  test_api.py  test_db.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_chat_module.py  003_mcp_connectors.py  004_ai_provider_byok.py  005_rename_plans.py  006_chat_is_byok.py  007_dev_workspace.py  008_onboarding_chat_api.py  009_workspace_runs.py  010_onboarding_chat.py  011_onboarding_checklist.py  012_onboarding_policy_profile_fields.py  013_chat_workspace_scope.py  014_add_multi_agent_config.py  015_add_netsuite_metadata.py  016_multi_agent_default_true.py  017_suitescript_sync.py  018_netsuite_api_log.py  019_add_netsuite_file_id.py  020_add_auth_type.py  021_rls_stable_function.py  022_workspace_file_locking.py  023_audit_uuidv7.py  024_add_custom_record_fields.py  025_tenant_entity_mapping.py  026_add_saved_searches.py  027_add_missing_metadata_columns.py  028_tenant_learned_rules.py  029_add_created_by_to_learned_rules.py  030_metered_billing.py  031_domain_knowledge_chunks.py  032_saved_suiteql_queries.py  033_connection_health_fields.py  034_tenant_query_patterns.py  035_tenant_unified_agent_flag.py  036_tenant_branding_and_domains.py  037_tenant_feature_flags.py  038_chat_message_content_summary.py  039_chat_message_confidence_score.py  040_query_importance.py  (+57 more)
backend/app/: main.py
backend/app/core/: api_key_auth.py  config.py  database.py  dependencies.py  encryption.py  logging.py  middleware.py  rate_limit.py  redis_client.py  redis_lock.py  security.py  text.py  token_denylist.py
backend/app/mcp/: governance.py  metrics.py  registry.py  server.py
backend/app/models/: __init__.py  agent_benchmark_run.py  agent_config.py  agent_lab_run.py  audit.py  canonical.py  chat.py  chat_api_key.py  chat_disclosure_event.py  connection.py  connection_alert.py  domain_knowledge.py  drive.py  eval_case.py  eval_score_history.py  experiment_log.py  feature_flag.py  invite.py  job.py  mcp_connector.py  metric_definition.py  netsuite_api_log.py  netsuite_metadata.py  onboarding_checklist.py  pipeline.py  policy_profile.py  pricing_conversion_log.py  prompt_template.py  reconciliation.py  report.py  report_version.py  saved_query.py  script_sync.py  task_file.py  tenant.py  tenant_entity_mapping.py  tenant_learned_rule.py  tenant_memory_concept.py  tenant_memory_edge.py  tenant_memory_link.py  (+6 more)
backend/app/schemas/: admin.py  agent.py  auth.py  chart.py  chat_api_key.py  common.py  connection.py  drive.py  learned_rule.py  mcp_connector.py  metric.py  onboarding_wizard.py  order_reconciliation.py  policy_profile.py  pricing.py  prompt_template.py  reconciliation.py  report.py  schedule.py  settings.py  soul.py  tenant.py  tenant_memory.py  tenant_profile.py  user.py  workspace.py
backend/app/scripts/: seed_metric_catalog.py  seed_oracle_skills.py
backend/app/services/: assertion_service.py  audit_retention.py  audit_service.py  auth_service.py  benchmark_email_service.py  bigquery_schema_seeder.py  bigquery_service.py  chat_api_key_service.py  confidence_extractor.py  confidence_service.py  connection_service.py  deploy_preview_service.py  deploy_service.py  docs_service.py  domain_service.py  email_service.py  entitlement_service.py  eval_case_generator.py  eval_case_miner.py  excel_export_service.py  feature_flag_service.py  google_auth_service.py  importance_classifier.py  invite_service.py  join_service.py  learned_rule_service.py  learned_rules_service.py  mcp_client_service.py  mcp_connector_service.py  (+38 more)
backend/eval/: bigquery_test_set.yaml  suiteql_test_set.yaml
backend/scripts/: e2e_deploy_gate_reset.py  e2e_reports_seed.py  export_tenant.py  import_tenant.py  ingest_docs.py  ingest_domain_knowledge.py  reembed_doc_chunks.py  reencrypt_tenant.py  render_statement_preview.py  sanitize_doc_chunks.py  seed_drive_rag_flag.py  validate_schema.py
backend/tests/: conftest.py  test_active_connectors_ordering.py  test_adapter_timeouts.py  test_agent_benchmark_task.py  test_agent_config.py  test_agent_lab_api.py  test_agent_lab_model.py  test_agent_lab_service.py  test_agent_registry.py  test_agent_result.py  test_agent_runner.py  test_agent_thinking_threading.py  test_agent_yaml_configs.py  test_ai_settings.py  test_alembic_single_head.py  test_anthropic_adapter_force_tool_choice.py  test_anthropic_thinking.py  test_approve_closed_run_guard.py  test_audit.py  test_audit_retention.py  test_auth.py  test_auth_security.py  test_auto_query_improvement_task.py  test_auto_source_pin.py  test_autonomy_envelope.py  test_autonomy_flags.py  test_baseline_runner.py  test_benchmark_scorer.py  test_bi_agent_config.py  test_bi_agent_end_to_end.py  test_bi_agent_routing.py  test_bigquery_connector_api.py  test_bigquery_schema_seeder.py  test_bigquery_service.py  test_bigquery_table_selector.py  test_bigquery_tool_registration.py  test_bigquery_tools.py  test_bigquery_validate_read_only.py  test_billing.py  test_change_request_quality.py  (+328 more)
desktop/: .gitignore  README.md  SMOKE-DEFERRAL-ELECTRON-LAUNCH.md  SMOKE-DEFERRAL-NS-SUITEQL.md  SMOKE-DEFERRAL-OBSIDIAN-VAULT.md  SMOKE-DEFERRAL-RICH-PIPE.md  SPIKE-RESULTS.md  pyproject.toml
desktop/electron/: .gitignore  main.ts  package-lock.json  package.json  playwright.config.ts  preload.ts  renderer.css  renderer.html  renderer.ts  sidecar.ts  tsconfig.json  types.d.ts  vitest.config.ts
desktop/runtime/: sidecar.py  sidecar.spec
desktop/tests/: test_mcp_integration.py  test_ns_suiteql_server.py  test_obsidian_memory_server.py  test_orchestration.py  test_rich_pipe_integration.py  test_runtime_dependencies.py  test_sample_dataset.py  test_sidecar.py  test_streaming_protocol.py
(+966 files in other folders)
