[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecom-netsuite-suites"
version = "0.1.0"
description = "NetSuite Ecommerce Ops Suite - Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "cryptography>=42.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "voyageai>=0.3.0",
    "pgvector>=0.3.0",
    "stripe>=8.0.0",
    "whatthepatch>=1.0.0",
    "psycopg2-binary>=2.9.0",
    "ddgs>=6.0.0",
    "dnspython>=2.6.0",
    "sentry-sdk[fastapi]>=2.0.0",
    "openpyxl>=3.1.0",
    "google-auth>=2.0.0",
    "google-api-python-client>=2.100.0",
    "google-auth-httplib2>=0.2.0",
    "google-cloud-bigquery>=3.20.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["N806", "N814", "E741", "E402"]

[tool.ruff.lint.per-file-ignores]
"app/services/chat/agents/base_agent.py" = ["E501"]
"app/services/chat/agents/suiteql_agent.py" = ["E501"]
"app/services/chat/agents/unified_agent.py" = ["E501"]
"app/mcp/tools/netsuite_financial_report.py" = ["E501"]
"app/services/chat/orchestrator.py" = ["E501", "E402", "F821"]
"app/services/chat/coordinator.py" = ["E501"]
"app/services/prompt_template_service.py" = ["E501"]
"app/services/excel_export_service.py" = ["E501"]
"app/services/query_pattern_service.py" = ["E501", "F821"]
"app/services/mcp_client_service.py" = ["E501"]
"app/services/chat/tool_call_results.py" = ["E501"]
"app/services/email_service.py" = ["E501"]
"app/api/v1/chat.py" = ["E501", "E402"]
"app/api/v1/jobs.py" = ["E402"]
"app/models/tenant.py" = ["E501"]
"app/workers/tasks/proactive_token_refresh.py" = ["E501"]
"app/services/chat/agents/workspace_agent.py" = ["E501"]
"app/services/chat/prompts.py" = ["E501"]
"app/services/chat/tenant_resolver.py" = ["E501"]
"app/mcp/tools/rag_search.py" = ["E501"]
"app/mcp/tools/result_reference_tool.py" = ["E501"]
"app/services/query_experiment_service.py" = ["E501"]
"app/services/query_eval_harness.py" = ["F821"]
"scripts/*" = ["E501"]
"tests/*" = ["E501"]
"test_*.py" = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
